<resources>
    <string name="app_name">FirePhotoBlog</string>
    <string name="login_logo_desc">Logo for login page</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Type your email...</string>
    <string name="login_btn_txt">Login to account</string>
    <string name="login_reg_btn_txt">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_txt">Create new Account</string>
    <string name="reg_login_txt">I have an Account</string>
    <string name="reg_pass_txt">Password...</string>
    <string name="reg_confirm_pass_txt">Comfirm Password...</string>
    <string name="setup_name_hint">Your name...</string>
    <string name="setup_btn_name_text">Save account settings</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="new_post_img_desc">Add new image.</string>
    <string name="bottom_home_txt">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_label">Comments :</string>
    <string name="comment_field_txt">Add a comment...</string>
</resources>
